[package]
name = "zrun"
version = "0.1.0"
authors = ["Ryan Clanton <ryanc@insightec.com>","Diego Giagio <diego@giagio.com>"]
edition ="2018"

[dependencies]
mimalloc = { version = "0.1.24", features = ["override","local_dynamic_tls"] }
remove_dir_all = "0.6.1"
memmem = "0.1.1"
tar = "0.4.32"
dirs = "3.0.1"
winapi = "0.3.9"
zstd = { version = "0.6.0"}


[profile.release]
