[package]
name = "zrun"
version = "0.1.0"
authors = ["Ryan Clanton <ryanc@insightec.com>","Diego Giagio <diego@giagio.com>"]
edition ="2018"

[dependencies]
mimalloc = { version = "0.1.24", features = ["override","local_dynamic_tls"] }
remove_dir_all = "0.6.1"
memmem = "0.1.1"
tar = "0.4.32"
dirs = "3.0.1"
winapi = "0.3.9"
zstd = { version = "0.6.0"}
static_vcruntime = "1.5"

[profile.release]
# Enable link-time optimization, eliminates more code and inlines across crate boundaries.
# Default: false
lto = true

# codegen-units of 1 gives best optimization, but disables parallel building.
# Default: 16
codegen-units = 1

# Includes debug information in release builds. Necessary for profiling. Does not
# slow down the executable.
debug = true

# The default optimization level is 3 for release mode builds.
# 0 means disable optimization and is the default for debug mode buids.
# (Setting opt-level=1 for debug builds is a good way of speeding them up a bit.)
# "s" means optimize for size, "z" reduces size even more.
opt-level = 3

[target.'cfg(all(windows, target_env = "msvc"))']
rustflags = ["-C", "target-feature=+crt-static"]